sample/sample-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-redis
  namespace: default
  labels:
    app: sample-redis
spec:
  selector:
    matchLabels:
      app: sample-redis
  replicas: 1
  template:
    metadata:
      labels:
        app: sample-redis
    spec:
      containers:
      - name: master
        image: redis
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "100m"
            memory: "100Mi"
        ports:
        - containerPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: sample-redis
  namespace: default
  labels:
    app: sample-redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: sample-redis
