sample/sample-tomcat.yml
# ------------------- Deployment ------------------- #

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-tomcat
  namespace: default
  labels:
    app: sample-tomcat
spec:
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
  selector:
    matchLabels:
      k8s-app: sample-tomcat
  template:
    metadata:
      labels:
        k8s-app: sample-tomcat
    spec:
      containers:
      - name: sample-tomcat
        image: nalbam/sample-tomcat:slim
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 3
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 3
          periodSeconds: 15
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
#        env:
#        - name: PROFILE
#          valueFrom:
#            configMapKeyRef:
#              name: sample-tomcat-dev
#              key: PROFILE

---
# ------------------- Service ------------------- #

apiVersion: v1
kind: Service
metadata:
  name: sample-tomcat
  namespace: default
  labels:
    app: sample-tomcat
spec:
  type: SERVICE_TYPE
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    k8s-app: sample-tomcat

---
# ------------------- Ingress ------------------- #

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-tomcat
  namespace: default
  labels:
    app: sample-tomcat
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: INGRESS_DOMAIN
    http:
      paths:
      - path: /
        backend:
          serviceName: sample-tomcat
          servicePort: 80
