sample/sample-web-ing.yml
# ------------------- Deployment ------------------- #

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-web
  namespace: default
  labels:
    app: sample-web
spec:
  replicas: 2
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
  selector:
    matchLabels:
      k8s-app: sample-web
  template:
    metadata:
      labels:
        k8s-app: sample-web
    spec:
      containers:
      - name: sample-web
        image: nalbam/sample-web:alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 3
          periodSeconds: 15
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
# ------------------- Service ------------------- #

apiVersion: v1
kind: Service
metadata:
  name: sample-web
  namespace: default
  labels:
    app: sample-web
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    k8s-app: sample-web

---
# ------------------- Ingress ------------------- #

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-web
  namespace: default
  labels:
    app: sample-web
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: ingress.domain.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sample-web
          servicePort: 80
