sample/sample-webpack.yaml
# ------------------- Deployment ------------------- #

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-webpack
  namespace: default
  labels:
    app: sample-webpack
spec:
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
  selector:
    matchLabels:
      k8s-app: sample-webpack
  template:
    metadata:
      labels:
        k8s-app: sample-webpack
    spec:
      containers:
      - name: sample-webpack
        image: quay.io/nalbam/sample-webpack
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          timeoutSeconds: 3
          periodSeconds: 15
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi

---
# ------------------- Service ------------------- #

apiVersion: v1
kind: Service
metadata:
  name: sample-webpack
  namespace: default
  labels:
    app: sample-webpack
spec:
  # type: SERVICE_TYPE
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    k8s-app: sample-webpack

---
# ------------------- Ingress ------------------- #

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-webpack
  namespace: default
  labels:
    app: sample-webpack
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: INGRESS_DOMAIN
    http:
      paths:
      - path: /
        backend:
          serviceName: sample-webpack
          servicePort: 80
